tests/unit_tests/sema/typeid_unresolved_id_01.cc
// RUN: %cxx -verify -fcheck %s

auto m = typeid(missing_identifier); // expected-error {{use of undeclared identifier 'missing_identifier'}}
